Delivering setup and templates.

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -1,5 +1,5 @@
 {
-    "basic_rules": [
+    "pre_rules": [
         "iptables -t mangle -F",
 	"iptables -t nat -F",
 	"iptables -F",
@@ -13,25 +13,18 @@
 	"iptables -I FORWARD -i lo -j ACCEPT"
     ],
     "devices": {
-        "external": "eth0",
-	"internal": "eth1",
-	"wlan":"eth2"
+        "external": "#EXT_DEV#",
+	"internal": "#INT_DEV#"
     },
     "open_ports": {
-        "eth0": ["22/tcp", "80/tcp", "443/tcp"],
-        "eth1": ["22/tcp"]
+        "external": ["ssh/tcp", "https/tcp"],
+        "internal": [ ]
     },
-    "open_ports_with_ip": {
-        "eth0": {
-            "192.168.1.0/24": ["80/tcp"],
-            "10.0.0.0/8": ["443/tcp"]
-        }
-    },
+    "open_ports_with_ip": {},
     "nat_rules": {
-        "eth0": {
-            "172.16.0.0/24": "192.168.178.127",
-            "172.16.1.0/24": "192.168.178.127",
-            "172.16.2.0/24": "192.168.178.127"
+        "external": {
+            "#CRANIX_SERVER_NET#": "#CRANIX_SERVER_EXT_IP#"
         }
     }
+    "post_rules": []
 }
