Reorganize structure. Add file to convert firewalld to cranix-firewall config.

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -20,11 +20,23 @@
         "external": ["ssh/tcp", "https/tcp"],
         "internal": [ ]
     },
-    "open_ports_with_ip": {},
+    "open_ports_with_ip": {
+        "external": { },
+        "internal": { }
+    },
     "nat_rules": {
         "external": {
             "#CRANIX_SERVER_NET#": "#CRANIX_SERVER_EXT_IP#"
-        }
+        },
+        "internal": { }
     }
-    "post_rules": []
+    "port_forward_rules": {
+        "external": [],
+        "internal": []
+    },
+    "post_rules": [
+        "/usr/share/cranix/tools/wait-for-api.sh",
+        "/usr/sbin/crx_manage_room_access.py --all --set_defaults",
+        "test -e /usr/share/cranix/tools/custom/fw-post-start.sh && /usr/share/cranix/tools/custom/fw-post-start.sh"
+    ]
 }
