--- a/templates/cranix-firewall.conf
+++ b/templates/cranix-firewall.conf
@@ -24,7 +24,8 @@
         "external": {
             "192.168.1.0/24": ["80/tcp"],
             "10.0.0.0/8": ["443/tcp"]
-        }
+        },
+	"internal": [] 
     },
     "nat_rules": {
         "external": {
@@ -32,6 +33,17 @@
             "172.16.1.0/24": "192.168.178.127",
             "172.16.2.0/24": "192.168.178.127"
         }
-    }
+    },
+    "port_forward_rules": {
+        "external": [
+	    {
+		"proto": "tcp",
+		"dport": "1880",
+		"to_ip": "172.16.2.3",
+		"to_port": "80"
+	    }
+	],
+	"internal": []
+    },
     "post_rules": []
 }
