New rule set: open_rules to open the firewall. Now cranix-firewall.py accept one command line parameter. This can have 3 values: start: the firewall will be setup all rules except of open_rules will be set. stop: only the pre_rules will be set. open: open_rules will be set.

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -1,4 +1,12 @@
 {
+     "open_rules": [
+         "iptables -t mangle -F",
+         "iptables -t nat -F",
+         "iptables -F",
+         "iptables -P INPUT ACCEPT",
+         "iptables -P FORWARD ACCEPT",
+         "iptables -P OUTPUT ACCEPT"
+    ],
     "pre_rules": [
         "iptables -t mangle -F",
 	"iptables -t nat -F",
