--- a/templates/cranix-firewall.conf
+++ b/templates/cranix-firewall.conf
@@ -1,4 +1,12 @@
 {
+     "open_rules": [
+         "iptables -t mangle -F",
+         "iptables -t nat -F",
+         "iptables -F",
+         "iptables -P INPUT ACCEPT",
+         "iptables -P FORWARD ACCEPT",
+         "iptables -P OUTPUT ACCEPT"
+    ],
     "pre_rules": [
         "iptables -t mangle -F",
 	"iptables -t nat -F",
