--- a/templates/cranix-firewall.service
+++ b/templates/cranix-firewall.service
@@ -2,6 +2,8 @@
 Description=CRANIX Firewall
 After=local-fs.target
 After=network.target
+After=cranix-api.service
+After=cephalix-api.service
 
 [Service]
 ExecStartPre=/usr/share/cranix/tools/firewall/setup_firewall.sh
