Enhance handling of external (NAT) rules. Handle protocol, destination and source_ip

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -33,10 +33,15 @@
         "internal": { }
     },
     "nat_rules": {
-        "external": {
-            "#CRANIX_SERVER_NET#": "#CRANIX_SERVER_EXT_IP#"
-        },
-        "internal": { }
+        "external": [
+            {
+                "proto": "",
+                "source": "#CRANIX_SERVER_NET#",
+                "dest": "",
+                "to_source": "#CRANIX_SERVER_EXT_IP#"
+            }
+        ]
+        "internal": []
     },
     "port_forward_rules": {
         "external": [],
