--- a/templates/cranix-firewall.conf
+++ b/templates/cranix-firewall.conf
@@ -36,11 +36,19 @@
 	"internal": [] 
     },
     "nat_rules": {
-        "external": {
-            "172.16.0.0/24": "192.168.178.127",
-            "172.16.1.0/24": "192.168.178.127",
-            "172.16.2.0/24": "192.168.178.127"
-        }
+        "external": [
+	    {
+	        "proto": "",
+		"source": "172.16.0.0/24",
+		"dest": "",
+		"to_source": ""
+	    },{
+	        "proto": "tcp",
+		"source": "172.16.1.0/24",
+		"dest": "17.0.0.0/8",
+		"to_source": "192.168.178.127"
+	    }
+        ]
     },
     "port_forward_rules": {
         "external": [
