Fix some typos after converting nat rules to list of hashes.

--- a/templates/cranix-firewall.conf
+++ b/templates/cranix-firewall.conf
@@ -48,7 +48,8 @@
 		"dest": "17.0.0.0/8",
 		"to_source": "192.168.178.127"
 	    }
-        ]
+        ],
+        "internal": []
     },
     "port_forward_rules": {
         "external": [
