Open the rooms to access the server

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -49,6 +49,7 @@
     },
     "post_rules": [
         "/usr/share/cranix/tools/wait-for-api.sh",
+        "/usr/share/cranix/tools/firewall/open_rooms.py",
         "/usr/sbin/crx_manage_room_access.py --all --set_defaults",
         "test -e /usr/share/cranix/tools/custom/fw-post-start.sh && /usr/share/cranix/tools/custom/fw-post-start.sh"
     ]
