Fix open firewall

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -51,6 +51,7 @@
         "/usr/share/cranix/tools/wait-for-api.sh",
         "/usr/share/cranix/tools/firewall/open_rooms.py",
         "/usr/sbin/crx_manage_room_access.py --all --set_defaults",
-        "test -e /usr/share/cranix/tools/custom/fw-post-start.sh && /usr/share/cranix/tools/custom/fw-post-start.sh"
+        "/usr/bin/systemctl is-enabled crx_fw_log_watcher.service && /usr/share/cranix/tools/unbound/activate_logging",
+        "test -x /usr/share/cranix/tools/custom/fw-post-start.sh && /usr/share/cranix/tools/custom/fw-post-start.sh"
     ]
 }
