Use full path for iptables

--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -1,24 +1,24 @@
 {
      "open_rules": [
-         "iptables -t mangle -F",
-         "iptables -t nat -F",
-         "iptables -F",
-         "iptables -P INPUT ACCEPT",
-         "iptables -P FORWARD ACCEPT",
-         "iptables -P OUTPUT ACCEPT"
+         "/usr/sbin/iptables -t mangle -F",
+         "/usr/sbin/iptables -t nat -F",
+         "/usr/sbin/iptables -F",
+         "/usr/sbin/iptables -P INPUT ACCEPT",
+         "/usr/sbin/iptables -P FORWARD ACCEPT",
+         "/usr/sbin/iptables -P OUTPUT ACCEPT"
     ],
     "pre_rules": [
-        "iptables -t mangle -F",
-	"iptables -t nat -F",
-	"iptables -F",
-	"iptables -P INPUT DROP",
-	"iptables -P FORWARD DROP",
-	"iptables -P OUTPUT ACCEPT",
-	"iptables -I INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT",
-	"iptables -I FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT",
-	"iptables -I INPUT -i lo -j ACCEPT",
-	"iptables -I FORWARD -o lo -j ACCEPT",
-	"iptables -I FORWARD -i lo -j ACCEPT"
+        "/usr/sbin/iptables -t mangle -F",
+	"/usr/sbin/iptables -t nat -F",
+	"/usr/sbin/iptables -F",
+	"/usr/sbin/iptables -P INPUT DROP",
+	"/usr/sbin/iptables -P FORWARD DROP",
+	"/usr/sbin/iptables -P OUTPUT ACCEPT",
+	"/usr/sbin/iptables -I INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT",
+	"/usr/sbin/iptables -I FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT",
+	"/usr/sbin/iptables -I INPUT -i lo -j ACCEPT",
+	"/usr/sbin/iptables -I FORWARD -o lo -j ACCEPT",
+	"/usr/sbin/iptables -I FORWARD -i lo -j ACCEPT"
     ],
     "devices": {
         "external": "#EXT_DEV#",
