--- a/templates/cranix-firewall-template.conf
+++ b/templates/cranix-firewall-template.conf
@@ -19,6 +19,9 @@
 	"/usr/sbin/iptables -I INPUT -i lo -j ACCEPT",
 	"/usr/sbin/iptables -I FORWARD -o lo -j ACCEPT",
 	"/usr/sbin/iptables -I FORWARD -i lo -j ACCEPT"
+	"/usr/sbin/iptables -I INPUT -i tun0 -j ACCEPT",
+	"/usr/sbin/iptables -I FORWARD -o tun0 -j ACCEPT",
+	"/usr/sbin/iptables -I FORWARD -i tun0 -j ACCEPT"
     ],
     "devices": {
         "external": "#EXT_DEV#",
